--- a/html/intro-element-attribute.html
+++ b/html/intro-element-attribute.html
@@ -54,7 +54,7 @@
         <p>The 'img' tag is used to embed an image in an HTML page. The 'src' attribute specifies the path to the image to be displayed.</p>
         <p>There are two ways to specify the URL in the src attribute:</p>
         <p><strong>1. Absolute URL</strong> - Links to an external image that is hosted on another website.</p>
-         <img src="https://assets.epicurious.com/photos/628d02aef79b073d2fe4e130/1:1/w_2240,c_limit/Japanese%20Cheesecake%E2%80%94RECIPE.jpg" width="100" height="100">
+         <img src="https://assets.epicurious.com/photos/628d02aef79b073d2fe4e130/1:1/w_2240,c_limit/Japanese%20Cheesecake%E2%80%94RECIPE.jpg" width="150" height="150">
         <p><strong>2. Relative URL</strong> - Links to an image that is hosted within the website. Here, the URL does not include the domain name.</p>
         <il>
             <li>If the URL begins without a slash, it will be relative to the current page. Example: src="pic.jpg".</li>
@@ -75,7 +75,7 @@
         
         <h2>The style Attribute</h2>
         <P>The style attribute is used to add styles to an element, such as color, font, size, and more.</P>
-        <p style="color:pink;">This is a pink paragraph.</p>
+        <p style="color:pink; text-align:center">This is a pink paragraph.</p>
 
         <h2>The lang Attribute</h2>
         <p>You should always include the 'lang' attribute inside the 'html' tag, to declare the language of the Web page. This is meant to assist search engines and browsers.</p>
